package sep.project.Services;

public class ClovervillePointsService {

    public ClovervillePointsService(){}
}
