' Generated by UML Generator
' Encoded: vLXDRzms4BthLn0-QPkrtRFH9jawIEeYC0pljZaKFT3IT4E44WMIsdGRvB-7f2IAdzfrqKlHaxNapDFCcyUXng-5n5ps3It49z9scEC6LHGBiP6IawTUmbt5sYtv6z3tnKTI0we8hoWKXR52cxeXxRkUe2y5GYyCMDbnqc1-t4gyXnja_gnkq86HklXg_RgEaWfBei2rq-3_HG58Kdr53IPjYVbUQ7zEsltlVqGGZo3afYEth9MSKGhSO5nsZBHont4DxucGD-Z1-wqjAieEm0z4-IWCbLCh1zFRz8RnOKtJjqGUtt60rc2gs6uJgvxr3ejF8tQufEqkTT9H7kLo2clqt0IKnzdXExOBmQzCjK7stIDJ6X7bL1srl0SvlVodurrTyl77NNs3thDslqh6ETVr0pmzACdyb-lQOVbnnxP6p6y91IjZz2Ew4Bowrlg-LiImdbSWhWVPNrX9H1JypoMHIM8G1lVotN2EZ_hnXuJJIyjm1h6Sil0MwHd8wMm7p3EYqaw9BSFM2PQKCwxhwQVbDcdiH2dPBq8tNorB7UBmv70U5dXWMre5E3cvfWx78K9CfEUuEYSieyjDfI-EEQWGrp6QmmayRQd3zIKmlyfwnmLS2E5aNlw17hdMFuMBEblDUVcUGreTwtgA9HZFjvmr3y25seMs0fEWNjjAniqLdSJtKmrVuZgzCWd2Nr2fSpyRbWBKfuCLfgFYioKO2zW_yXEcNcjn0nPYuPYNhg4XYqF7k2k3JEjIHt5btwStxXMI4_Tp3fNJNiTQCudfr8L9A-DJvBYKeVLgZ6Wth-lN3pXQvEv6v_ZzmtumnAp4MN7IQSfSvWt-8tp6lCwaeY7AAUOtCufFfl3t4czBQ7Huhv-ykn46zmm678KC-MFpx8fmYP7VCEt14eAxZYjjAjydnYZWLaVG2-0kNDYt30SJy1eTBE8QkQvBZNIWwbTZxSfPqRGPGogDNcnWFidMQEL5hdT6De93aYtlL373Yr-myyikF920vsXac9kJqs3lWyOnVsgvfQWuODKl7nETPwdecuRr-YvsZu7J8jrUj4QXnnffw65tjif4ShhekodRT1t6b0DHU5inDRuuRiFG0h1uFvUC1_llTeY1u4I763V2AaGgSYuLvrhTwgLg59OTPAT9mDoqRmY7IZqUtN7WwfgI9pK168kBrCqLlyJqplabdpcHC23kZ03qp56EtM6IpPzgpRlwPcOiaC07c2zvcfWqSbwsjGTtJEhsoc9alicdsrvafvaK8cMuzZvOee7HjqtUiwliB1WuvyQ9_F2Pb9D1TvNq8hUh911Ep9wV3Oz3MmF_MJQqr1AuzoKmtt7nlrE-kxmCIKiRvLBCMAS8FM5gX-lOxkhgPN8iYl-DaCWdRPJB9sETokU4gSqdjilbavk1MJhW8fxVM1X14GvJsi9PAuAXX7a45ijzKESHi7tQ8Sdb6MwPWhrMskyR-Wq
' URL: http://www.plantuml.com/plantuml/uml/vLXDRzms4BthLn0-QPkrtRFH9jawIEeYC0pljZaKFT3IT4E44WMIsdGRvB-7f2IAdzfrqKlHaxNapDFCcyUXng-5n5ps3It49z9scEC6LHGBiP6IawTUmbt5sYtv6z3tnKTI0we8hoWKXR52cxeXxRkUe2y5GYyCMDbnqc1-t4gyXnja_gnkq86HklXg_RgEaWfBei2rq-3_HG58Kdr53IPjYVbUQ7zEsltlVqGGZo3afYEth9MSKGhSO5nsZBHont4DxucGD-Z1-wqjAieEm0z4-IWCbLCh1zFRz8RnOKtJjqGUtt60rc2gs6uJgvxr3ejF8tQufEqkTT9H7kLo2clqt0IKnzdXExOBmQzCjK7stIDJ6X7bL1srl0SvlVodurrTyl77NNs3thDslqh6ETVr0pmzACdyb-lQOVbnnxP6p6y91IjZz2Ew4Bowrlg-LiImdbSWhWVPNrX9H1JypoMHIM8G1lVotN2EZ_hnXuJJIyjm1h6Sil0MwHd8wMm7p3EYqaw9BSFM2PQKCwxhwQVbDcdiH2dPBq8tNorB7UBmv70U5dXWMre5E3cvfWx78K9CfEUuEYSieyjDfI-EEQWGrp6QmmayRQd3zIKmlyfwnmLS2E5aNlw17hdMFuMBEblDUVcUGreTwtgA9HZFjvmr3y25seMs0fEWNjjAniqLdSJtKmrVuZgzCWd2Nr2fSpyRbWBKfuCLfgFYioKO2zW_yXEcNcjn0nPYuPYNhg4XYqF7k2k3JEjIHt5btwStxXMI4_Tp3fNJNiTQCudfr8L9A-DJvBYKeVLgZ6Wth-lN3pXQvEv6v_ZzmtumnAp4MN7IQSfSvWt-8tp6lCwaeY7AAUOtCufFfl3t4czBQ7Huhv-ykn46zmm678KC-MFpx8fmYP7VCEt14eAxZYjjAjydnYZWLaVG2-0kNDYt30SJy1eTBE8QkQvBZNIWwbTZxSfPqRGPGogDNcnWFidMQEL5hdT6De93aYtlL373Yr-myyikF920vsXac9kJqs3lWyOnVsgvfQWuODKl7nETPwdecuRr-YvsZu7J8jrUj4QXnnffw65tjif4ShhekodRT1t6b0DHU5inDRuuRiFG0h1uFvUC1_llTeY1u4I763V2AaGgSYuLvrhTwgLg59OTPAT9mDoqRmY7IZqUtN7WwfgI9pK168kBrCqLlyJqplabdpcHC23kZ03qp56EtM6IpPzgpRlwPcOiaC07c2zvcfWqSbwsjGTtJEhsoc9alicdsrvafvaK8cMuzZvOee7HjqtUiwliB1WuvyQ9_F2Pb9D1TvNq8hUh911Ep9wV3Oz3MmF_MJQqr1AuzoKmtt7nlrE-kxmCIKiRvLBCMAS8FM5gX-lOxkhgPN8iYl-DaCWdRPJB9sETokU4gSqdjilbavk1MJhW8fxVM1X14GvJsi9PAuAXX7a45ijzKESHi7tQ8Sdb6MwPWhrMskyR-Wq
' Generated on: 2025-12-10T13:48:45.631108500

@startuml
skinparam classAttributeIconSize 0
hide circle

class AdminGui {
  +start(primaryStage: Stage): void
}

class ApplicationStart {
  +{static} main(args: String[]): void
}

class RestApiController {
  -pointTradeList: PointTradeList
  -clovervilleResidentList: ClovervilleResidentList
  -communityGreenPoints: CommunityGreenPoints
  -communityTaskList: CommunityTaskList
  --
  +RestApiController(pointTradeList: PointTradeList, clovervilleResidentList: ClovervilleResidentList, communityGreenPoints: CommunityGreenPoints, communityTaskList: CommunityTaskList)
  +setupRoutes(): void
  +getResidentById(residentId: Long): ClovervilleResident
}

class WebPageController {
  -pointTradeList: PointTradeList
  -clovervilleResidentList: ClovervilleResidentList
  -communityGreenPoints: CommunityGreenPoints
  -communityTaskList: CommunityTaskList
  -pathToStaticFiles: String = "src/main/resources/static"
  --
  +WebPageController(pointTradeList: PointTradeList, clovervilleResidentList: ClovervilleResidentList, communityGreenPoints: CommunityGreenPoints, communityTaskList: CommunityTaskList)
  +setupRoutes(): void
  +getResidentById(residentId: Long): ClovervilleResident
}

class ClovervilleResidentList {
  -residentList: ArrayList<ClovervilleResident>
  --
  +ClovervilleResidentList()
  +setResidentList(list: ArrayList<ClovervilleResident>): void
  +getResidentList(): ArrayList<ClovervilleResident>
  +getClovervilleResidentById(Id: Long): ClovervilleResident
  +addResident(resident: ClovervilleResident): void
  +toJsonString(): String
}

class CommunityTaskList {
  -taskList: ArrayList<CommunityTask>
  --
  +CommunityTaskList(list: ArrayList<CommunityTask>)
  +toJsonString(): String
}

class GreenActionList {
  -list: ArrayList<GreenAction>
  --
  +GreenActionList()
  +setGreenActionList(list: ArrayList<GreenAction>): void
  +getGreeActionList(): ArrayList<GreenAction>
  +toJsonString(): String
}

class PointTradeList {
  -trades: ArrayList<PointTrade>
  --
  +PointTradeList()
  +populateArrayFromPersistence(listFromStorage: ArrayList<PointTrade>): void
  +getPointTradeList(): ArrayList<?>
  +executePointTrade(secondResidentId: Long): void
  +toJsonString(): String
}

class ClovervilleResident {
  -residentId: Long
  -name: String
  --
  +ClovervilleResident(name: String)
  +reportGreenAction(): void
  +getResidentId(): Long
  +getName(): String
  +toJsonString(): String
}

class CommunityGreenPoints {
  -totalPoints: int
  --
  +CommunityGreenPoints(totalPoints: int)
  +getTotalPoints(): int
  +setTotalPoints(points: int): void
  +toJsonString(): String
}

class CommunityTask {
  -description: String
  -pointReward: int
  --
  +CommunityTask()
  +getDescription(): String
  +setDescription(description: String): void
  +getPointReward(): int
  +setPointReward(pointReward: int): void
  +toJsonString(): String
}

class GreenAction {
  -actionId: Long
  -description: String
  -pointValue: int
  -approved: boolean
  +userId: Long
  --
  +GreenAction(desc: String, value: int, userId: Long)
  +toJsonString(): String
  +getUserId(): Long
  +setApproved(setTo: boolean): void
  +getApproved(): boolean
  +getActionId(): Long
  +getDescription(): String
  +getPointValue(): int
  +setDescription(description: String): void
  +setPointValue(pointValue: int): void
}

class PointTrade {
  -tradeName: String
  -pointTradeId: Long
  -creatorResidentId: Long
  -description: String
  -pointAmount: int
  --
  +PointTrade(name: String, pointAmount: int, descString: String, creatorResidentId: Long)
  +toJsonString(): String
  +getTradeName(): String
  +getPointTradeId(): Long
  +setPointTradeId(pointTradeId: Long): void
  +getCreatorResidentId(): Long
  +setCreatorResidentId(creatorResidentId: Long): void
  +getDescription(): String
  +setDescription(description: String): void
  +getPointAmount(): int
  +setPointAmount(pointAmount: int): void
}

class ClovervillePersistenceService {
  -{static} pathToStorageDirectory: String = "./lib/storage"
  --
  +ClovervillePersistenceService()
  -{static} writeStringToJsonFile(value: String, filename: String): void
  +{static} saveTradeList(list: PointTradeList): void
  +{static} saveCommunityPoints(points: CommunityGreenPoints): void
  +{static} saveClovervilleResidentList(residents: ClovervilleResidentList): void
  +{static} loadTradeList(): PointTradeList
  +{static} loadCommunityGreenPoints(): CommunityGreenPoints
  +{static} loadClovervilleResidentList(): ClovervilleResidentList
}

class ClovervillePointsService {
  +ClovervillePointsService()
}

class WebPageService {
  +{static} renderHtml(fileName: String): String
}

RestApiController *-- PointTradeList
RestApiController *-- ClovervilleResidentList
RestApiController *-- CommunityGreenPoints
RestApiController *-- CommunityTaskList
RestApiController ..> ClovervilleResident
WebPageController *-- PointTradeList
WebPageController *-- ClovervilleResidentList
WebPageController *-- CommunityGreenPoints
WebPageController *-- CommunityTaskList
WebPageController ..> ClovervilleResident
ClovervilleResidentList o-- ClovervilleResident
CommunityTaskList o-- CommunityTask
GreenActionList o-- GreenAction
PointTradeList o-- PointTrade
ClovervillePersistenceService ..> PointTradeList
ClovervillePersistenceService ..> CommunityGreenPoints
ClovervillePersistenceService ..> ClovervilleResidentList
@enduml